packages/header/src/scss/_component.scss
/* ... */
.uq-header__search-container {
  form, fieldset {
      border: unset;
      padding: 0;
      margin: 0;
  }
}

.uq-header__search-query-input {
  height: 50px !important;
}

.uq-header .nav-primary__search-toggle {
  margin-bottom: 0;
}

.uq-site-header__navigation__list-link:hover,
.uq-site-header__navigation__sub-toggle {
  /* override for bless css in D7 sites.*/
  color: core.$uq-purple !important;
  background-color: transparent !important;
}

.uq-header .nav-primary__menu-toggle {
  margin-bottom: 0 !important;
}

.uq-site-header__navigation a {
  /* override for bless css in D7 sites.*/
  color: core.$uq-purple !important;
}

